I hate this git bs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": ".",
-      "program": "build/Debug/outDebug",
+      "cwd": "c:/Users/EN/AppData/Roaming/GitHub Desktop/Github Projects/243_project/src",
+      "program": "c:/Users/EN/AppData/Roaming/GitHub Desktop/Github Projects/243_project/src/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
